# openweather

./: Cargo.toml  README.md
src/: lib.rs  weather_types.rs
