[package]
name = "openweather"
version = "0.0.1"
authors = ["Carsten Strunk <carstenstrunk@gmail.com>"]
description = "A rust crate wrapping openweather's API into a simple easy to use interface"
repository = "https://github.com/Carsten87/openweather"
readme = "README.md"
keywords = ["openweather", "openweathermaps", "weather", "api"]
categories = ["api-bindings", "science"]
license = "MIT"
license-file = "LICENSE-MIT"

[lib]
name = "openweather"
path = "src/lib.rs"

[dependencies]
reqwest = "0.9.11"
url = "1.7.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
time = "0.1.40"